--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,21 @@
-# Nome del processo che vedrai su GitHub
-name: Compila Gestionale Gitemania per Windows
+name: Compila Gestionale Gitemania per Windows (Modalita Cartella Veloce)
 
-# Quando eseguire questo processo: ad ogni 'push' sul repository
 on: [push]
 
 jobs:
   build-windows-exe:
-    # Usa l'ultima versione di Windows disponibile su GitHub
     runs-on: windows-latest
 
     steps:
-      # 1. Scarica il codice del tuo repository
       - name: Checkout del codice
         uses: actions/checkout@v4
 
-      # 2. Imposta l'ambiente Python
       - name: Setup Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
 
-      # 3. Installa tutte le dipendenze necessarie
       - name: Installa le dipendenze
-        # CORREZIONE: Forza la codifica UTF-8 per Python per evitare errori con caratteri speciali
         env:
           PYTHONUTF8: "1"
         run: |
@@ -30,20 +23,15 @@ jobs:
           pip install -r requirements.txt
         shell: cmd
 
-      # 4. Esegue il comando di compilazione
-      - name: Compila l'eseguibile .exe
-        # CORREZIONE: Forza la codifica UTF-8 anche per lo script di build
+      - name: Compila l'eseguibile (modalita cartella)
         env:
           PYTHONUTF8: "1"
         run: |
           python setup.py build
         shell: cmd
 
-      # 5. Carica il risultato finale come "artefatto" scaricabile
-      - name: Upload dell'eseguibile compilato
+      - name: Upload della cartella compilata
         uses: actions/upload-artifact@v4
         with:
-          # Nome del file ZIP che potrai scaricare
-          name: GestionaleGitemania-Windows-EXE
-          # Percorso della cartella da zippare e caricare
-          path: dist/GestionaleGitemania_Portable/
+          name: GestionaleGitemania-Windows-Cartella
+          path: dist/GestionaleGitemania/ # <-- MODIFICA: Carica la cartella principale
